# esplamp

./: .gitignore  .gitmodules  LICENSE  README.md  env_example  load_env.py  minhttp.c  platformio.ini
app/: CMakeLists.txt  Makefile  README.md
app/android/: AndroidManifest.xml  proguard-rules.pro
app/src/: CMakeLists.txt
app/src/app/: CMakeLists.txt  DeviceDiscovery.cpp  DeviceDiscovery.h  RGBController.cpp  RGBController.h  consts.h  main.cpp  main.qml
lib/minhttp/: minhttp.c  minhttp.h
src/: user_main.c
